IOT-46 Switched Ionicons with Material Icons

--- a/frontend/src/app/components/nav/navbar/navbar.component.html
+++ b/frontend/src/app/components/nav/navbar/navbar.component.html
@@ -1,5 +1,6 @@
 <nav class="navbar is-primary" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
+    <i class="navbar-item material-icons md-24">menu</i>
     <span class="navbar-item">IoT Platform</span>
 
     <a
