IOT-40 Added basic navbar

--- a/frontend/src/app/components/nav/navbar/navbar.component.html
+++ b/frontend/src/app/components/nav/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar is-primary" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
-    <i class="navbar-item material-icons md-24">menu</i>
-    <span class="navbar-item">IoT Platform</span>
+    <span class="navbar-item"> <i class="material-icons">menu</i></span>
+    <span class="navbar-item"><h1 class="title">IoT Platform</h1></span>
 
     <a
       role="button"
@@ -16,33 +16,15 @@
     </a>
   </div>
 
-  <div id="navbarBasicExample" class="navbar-menu">
-    <div class="navbar-start">
+  <div class="navbar-menu">
+    <!-- <div class="navbar-start">
       <a class="navbar-item"> Home </a>
-
-      <a class="navbar-item"> Documentation </a>
-
-      <div class="navbar-item has-dropdown is-hoverable">
-        <a class="navbar-link"> More </a>
-
-        <div class="navbar-dropdown">
-          <a class="navbar-item"> About </a>
-          <a class="navbar-item"> Jobs </a>
-          <a class="navbar-item"> Contact </a>
-          <hr class="navbar-divider" />
-          <a class="navbar-item"> Report an issue </a>
-        </div>
-      </div>
-    </div>
+    </div> -->
 
     <div class="navbar-end">
       <div class="navbar-item">
-        <div class="buttons">
-          <a class="button is-primary">
-            <strong>Sign up</strong>
-          </a>
-          <a class="button is-light"> Log in </a>
-        </div>
+        <i class="material-icons md-light">notifications</i>
+        <i class="material-icons md-light">person</i>
       </div>
     </div>
   </div>
