--- a/frontend/src/styles/variables.scss
+++ b/frontend/src/styles/variables.scss
@@ -3,5 +3,10 @@
 // Colors customization
 $primary: #395d7d;
 $primary-dark: #3b4856;
-$giallo: yellow;
+
+// Icons
+$icon-active: #fff;
+$icon-inactive: #b5b5b5;
+$icon-hover: #dbdbdb;
+
 $navbar-breakpoint: $tablet;
