--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -33,21 +33,20 @@
 }
 
 /* Rules for using icons as black on a light background. */
-.material-icons.md-dark {
-  color: rgba(0, 0, 0, 0.54);
-}
-.material-icons.md-dark.md-inactive {
-  color: rgba(0, 0, 0, 0.26);
-}
+// .material-icons.md-dark {
+//   color: rgba(0, 0, 0, 0.54);
+// }
+// .material-icons.md-dark.md-inactive {
+//   color: rgba(0, 0, 0, 0.26);
+// }
 
 /* Rules for using icons as white on a dark background. */
 .material-icons.md-light {
-  color: rgba(255, 255, 255, 1);
+  color: $icon-active;
 }
 .material-icons.md-light:hover {
-  color: rgba(0, 0, 0, 0.54);
+  color: $icon-hover;
 }
-
 .material-icons.md-light.md-inactive {
-  color: rgba(255, 255, 255, 0.3);
+  color: $icon-inactive;
 }
