--- a/frontend/src/app/components/nav/navbar/navbar.component.html
+++ b/frontend/src/app/components/nav/navbar/navbar.component.html
@@ -1,31 +1,28 @@
 <nav class="navbar is-primary" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
-    <span class="navbar-item"> <i class="material-icons">menu</i></span>
-    <span class="navbar-item"><h1 class="title">IoT Platform</h1></span>
-
-    <a
-      role="button"
-      class="navbar-burger"
-      aria-label="menu"
-      aria-expanded="false"
-      data-target="navbarBasicExample"
-    >
-      <span aria-hidden="true"></span>
-      <span aria-hidden="true"></span>
-      <span aria-hidden="true"></span>
-    </a>
-  </div>
-
-  <div class="navbar-menu">
-    <!-- <div class="navbar-start">
-      <a class="navbar-item"> Home </a>
-    </div> -->
-
-    <div class="navbar-end">
-      <div class="navbar-item">
-        <i class="material-icons md-light">notifications</i>
-        <i class="material-icons md-light">person</i>
-      </div>
+    <span class="navbar-item sidebar-menu">
+      <i class="material-icons">menu</i>
+    </span>
+    <span class="navbar-item">
+      <h1 class="title">IoT Platform</h1>
+    </span>
+    <div class="navbar-item icons-wrapper">
+      <i class="material-icons md-light">notifications</i>
+      <i class="material-icons md-light">person</i>
     </div>
+
+    <button class="navbar-burger" aria-label="menu" aria-expanded="false">
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+    </button>
   </div>
+
+  <!-- <div class="navbar-menu">
+    <div class="navbar-start">
+      <a class="navbar-item"> Home </a>
+    </div>
+
+    <div class="navbar-end"></div>
+  </div> -->
 </nav>
