IOT-40 First navbar responsive attempt

--- a/frontend/src/app/components/nav/navbar/navbar.component.html
+++ b/frontend/src/app/components/nav/navbar/navbar.component.html
@@ -4,25 +4,34 @@
       <i class="material-icons">menu</i>
     </span>
     <span class="navbar-item">
-      <h1 class="title">IoT Platform</h1>
+      <h1 class="navbar-title">IoT Platform</h1>
     </span>
-    <div class="navbar-item icons-wrapper">
-      <i class="material-icons md-light">notifications</i>
-      <i class="material-icons md-light">person</i>
-    </div>
 
-    <button class="navbar-burger" aria-label="menu" aria-expanded="false">
+    <div class="navbar-item icons-container">
+      <span class="icon-wrapper"
+        ><i class="material-icons md-light">notifications</i></span
+      >
+      <span class="icon-wrapper"
+        ><i class="material-icons md-light">person</i></span
+      >
+    </div>
+    <button class="navbar-burger" aria-label="menu">
       <span aria-hidden="true"></span>
       <span aria-hidden="true"></span>
       <span aria-hidden="true"></span>
     </button>
   </div>
 
-  <!-- <div class="navbar-menu">
-    <div class="navbar-start">
-      <a class="navbar-item"> Home </a>
+  <div class="navbar-menu">
+    <div class="navbar-end">
+      <div class="navbar-item icons-container">
+        <span class="icon-wrapper"
+          ><i class="material-icons md-light">notifications</i></span
+        >
+        <span class="icon-wrapper"
+          ><i class="material-icons md-light">person</i></span
+        >
+      </div>
     </div>
-
-    <div class="navbar-end"></div>
-  </div> -->
+  </div>
 </nav>
