--- a/frontend/src/styles/variables.scss
+++ b/frontend/src/styles/variables.scss
@@ -9,4 +9,8 @@ $icon-active: #fff;
 $icon-inactive: #b5b5b5;
 $icon-hover: #dbdbdb;
 
+/* BREAKPOINTS */
+$widescreen-enabled: false;
+$fullhd-enabled: false;
+// $tablet: 475px;
 $navbar-breakpoint: $tablet;
