IOT-40 Finished navbar responsive style

--- a/frontend/src/app/components/nav/navbar/navbar.component.html
+++ b/frontend/src/app/components/nav/navbar/navbar.component.html
@@ -7,13 +7,13 @@
       <h1 class="navbar-title">IoT Platform</h1>
     </span>
 
-    <div class="navbar-item icons-container">
-      <span class="icon-wrapper"
-        ><i class="material-icons md-light">notifications</i></span
-      >
-      <span class="icon-wrapper"
-        ><i class="material-icons md-light">person</i></span
-      >
+    <div class="icons-container">
+      <div class="navbar-item icon-wrapper">
+        <i class="material-icons md-light">notifications</i>
+      </div>
+      <div class="navbar-item icon-wrapper">
+        <i class="material-icons md-light">person</i>
+      </div>
     </div>
     <button class="navbar-burger" aria-label="menu">
       <span aria-hidden="true"></span>
