--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -44,9 +44,9 @@
 .material-icons.md-light {
   color: $icon-active;
 }
-.material-icons.md-light:hover {
-  color: $icon-hover;
-}
+// .material-icons.md-light:hover {
+//   color: $icon-hover;
+// }
 .material-icons.md-light.md-inactive {
   color: $icon-inactive;
 }
