--- a/frontend/src/styles/variables.scss
+++ b/frontend/src/styles/variables.scss
@@ -12,5 +12,5 @@ $icon-hover: #dbdbdb;
 /* BREAKPOINTS */
 $widescreen-enabled: false;
 $fullhd-enabled: false;
-// $tablet: 475px;
+$tablet: 700px;
 $navbar-breakpoint: $tablet;
