IOT-40 Added basic sidebar

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,1 +1,9 @@
-<app-smart-nav></app-smart-nav>
+<app-navbar></app-navbar>
+<div class="sidebar">
+  <app-sidebar></app-sidebar>
+</div>
+<div class="content">
+  Prova
+
+  <!-- <router-outlet></router-outlet> -->
+</div>
