--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -16,21 +16,21 @@
 /* Docs: https://developers.google.com/fonts/docs/material_icons */
 
 /* Rules for sizing the icon. */
-.material-icons.md-18 {
-  font-size: 18px;
-}
-.material-icons.md-24 {
-  font-size: 24px;
-}
-.material-icons.md-28 {
-  font-size: 28px;
-}
-.material-icons.md-36 {
-  font-size: 36px;
-}
-.material-icons.md-48 {
-  font-size: 48px;
-}
+// .material-icons.md-18 {
+//   font-size: 18px;
+// }
+// .material-icons.md-24 {
+//   font-size: 24px;
+// }
+// .material-icons.md-28 {
+//   font-size: 28px;
+// }
+// .material-icons.md-36 {
+//   font-size: 36px;
+// }
+// .material-icons.md-48 {
+//   font-size: 48px;
+// }
 
 /* Rules for using icons as black on a light background. */
 // .material-icons.md-dark {
@@ -49,4 +49,11 @@
 // }
 .material-icons.md-light.md-inactive {
   color: $icon-inactive;
+}
+
+.material-icons {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
