IOT-40 Fixed navbar scrolling behaviour

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,9 +1,53 @@
 <app-navbar></app-navbar>
-<div class="sidebar">
-  <app-sidebar></app-sidebar>
-</div>
-<div class="content">
-  Prova
 
-  <!-- <router-outlet></router-outlet> -->
+<app-sidebar></app-sidebar>
+<div class="content">
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sit amet
+    egestas ex, a congue justo. Duis eu massa eget sem fringilla feugiat id
+    vitae tortor. Sed imperdiet urna velit, fermentum congue magna gravida ut.
+    Vestibulum lacinia erat mi, quis tincidunt sem faucibus ac. Nulla sed luctus
+    elit. Nunc accumsan gravida nisl ut placerat. Aliquam orci risus, tristique
+    et sollicitudin eu, pharetra rutrum augue. Etiam euismod, turpis id luctus
+    facilisis, lacus nisl fermentum diam, sit amet sollicitudin ante turpis in
+    sem. Mauris id leo et lacus ullamcorper consectetur a et est. Vivamus turpis
+    orci, mattis a vulputate ac, cursus ac libero. Duis sed nisl sagittis,
+    volutpat lorem at, accumsan justo. Nunc imperdiet nisl in volutpat
+    consequat. Pellentesque aliquam, purus eget finibus mollis, lorem ipsum
+    feugiat est, nec porttitor orci erat in libero. Pellentesque in tincidunt
+    tortor, porta rutrum dui. Mauris et lectus nunc. Praesent nec lectus tellus.
+    Morbi et eleifend neque, eget sodales nibh. Ut eget tellus lorem. Curabitur
+    ut lacinia leo, sit amet porttitor elit. Praesent non sem quis nulla mattis
+    finibus ac vestibulum dui. Integer facilisis nisl magna, non lacinia velit
+    euismod a. Donec placerat finibus nisi, ac eleifend felis varius eu. Ut elit
+    nisi, ultrices nec tellus nec, porttitor sagittis ex. In tellus tellus,
+    commodo non aliquet et, pharetra sed velit. Morbi eget congue turpis. Donec
+    iaculis elit at neque sollicitudin, eu sodales nisi rutrum. In purus mi,
+    mollis a urna quis, rhoncus consequat augue. Class aptent taciti sociosqu ad
+    litora torquent per conubia nostra, per inceptos himenaeos. Aliquam erat
+    volutpat. Suspendisse potenti. Nunc tempus venenatis dolor, ut pretium nulla
+    pretium quis. Class aptent taciti sociosqu ad litora torquent per conubia
+    nostra, per inceptos himenaeos. Sed risus ex, pulvinar id nisl sit amet,
+    interdum condimentum ligula. Nulla eu eros a lectus rhoncus venenatis ac non
+    nulla. Curabitur scelerisque non nisl eget dictum. Phasellus ullamcorper
+    tempus nunc tincidunt eleifend. Aenean vestibulum turpis sit amet faucibus
+    pretium. Aliquam consectetur, mi varius pulvinar porta, nibh arcu posuere
+    odio, et aliquam enim magna eu tellus. Phasellus nec felis eu velit feugiat
+    aliquam et at quam. Donec aliquam bibendum sem nec maximus. Morbi mattis,
+    ipsum id commodo imperdiet, purus arcu lacinia erat, eu cursus felis magna
+    non quam. Nam id dui mattis, tristique nisl posuere, ullamcorper massa. Sed
+    eget semper nibh, et aliquam massa. Sed commodo velit vel augue gravida
+    viverra. Vivamus condimentum neque quis ligula maximus, a finibus libero
+    eleifend. Nulla mattis enim tortor, quis tincidunt dolor efficitur sit amet.
+    Donec accumsan urna et fringilla rhoncus. Nulla et mauris vitae felis
+    pulvinar bibendum. Aliquam efficitur erat ac lectus interdum, a viverra erat
+    mollis. Nullam laoreet libero dui, et luctus diam fermentum sit amet.
+    Suspendisse vestibulum ornare risus, in luctus diam commodo et. Morbi eu
+    viverra eros, nec dapibus neque. Nullam vulputate, purus in ornare
+    convallis, sapien magna lobortis ipsum, ut commodo neque ipsum at turpis.
+    Mauris nec faucibus lectus. Etiam sed diam eget eros feugiat tempus et eget
+    odio. Cras a dui diam. Etiam quis elementum urna. Quisque elementum, est
+    eget congue auctor, enim dui convallis justo, non aliquet nibh nunc nec
+    justo.
+  </p>
 </div>
