--- a/frontend/src/app/components/nav/sidebar-elem/sidebar-elem.component.html
+++ b/frontend/src/app/components/nav/sidebar-elem/sidebar-elem.component.html
@@ -1,4 +1,4 @@
 <a href="#">
-  <i class="material-icons md-light md-inactive">{{ iconName }}</i>
+  <i class="material-icons md-light">{{ iconName }}</i>
   <span class="is-size-5">{{ iconText }}</span>
 </a>
