--- a/frontend/src/styles/variables.scss
+++ b/frontend/src/styles/variables.scss
@@ -1,10 +1,10 @@
 @import "bulma/sass/utilities/initial-variables";
 
-// Colors customization
+/* COLORS */
 $primary: #395d7d;
 $primary-dark: #3b4856;
 
-// Icons
+/* ICONS */
 $icon-active: #fff;
 $icon-inactive: #b5b5b5;
 $icon-hover: #dbdbdb;
@@ -14,3 +14,8 @@ $tablet: 700px;
 $fullhd-enabled: false;
 $widescreen-enabled: false;
 $navbar-breakpoint: $tablet;
+
+/* NAVBARS */
+$top-navbar-height: 52px;
+$side-navbar-width: 200px;
+$side-navbar-collapsed_width: 80px;
