--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -1,7 +1,7 @@
 @import "../styles/variables.scss";
 
 .content {
-  margin-left: $side-navbar-width;
-  padding: 15px 15px;
+  // margin-left: $side-navbar-width;
+  padding: 20px 15px;
   text-align: justify;
 }
