--- a/frontend/src/app/components/nav/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/nav/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" [ngStyle]="{ width: isExpanded ? '200px' : '60px' }">
   <div class="icons-wrapper">
     <a href="#">
       <i class="material-icons md-light">explore</i>
