--- a/frontend/src/app/components/nav/sidebar/sidebar.component.scss
+++ b/frontend/src/app/components/nav/sidebar/sidebar.component.scss
@@ -5,14 +5,13 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  width: $side-navbar-width;
+  // width: $side-navbar-width;
   background-color: $primary-dark;
-  // background-color: transparent;
-  // z-index: 1;
   position: fixed;
   top: $top-navbar-height;
   left: 0;
   overflow-x: hidden;
+  z-index: 10;
 
   & .icons-wrapper {
     display: flex;
@@ -20,21 +19,13 @@
   }
 
   & a {
-    // margin-top: 20px;
-    // display: flex;
-    // justify-content: space-between;
     color: $icon-inactive;
     display: flex;
     align-items: center;
-    // border: 1px solid red;
     padding-left: 16px;
-    // text-decoration: none;
 
     &:hover {
       background-color: rgba(0, 0, 0, 0.25);
-    }
-    &:active {
-      // color: blue;
     }
   }
 }
