IOT-40 Added button ripple effect

--- a/frontend/src/app/components/nav/navbar/navbar.component.html
+++ b/frontend/src/app/components/nav/navbar/navbar.component.html
@@ -1,12 +1,11 @@
 <nav class="navbar is-primary" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
-    <span class="navbar-item sidebar-menu">
+    <span class="navbar-item sidebar-menu ripple">
       <i class="material-icons">menu</i>
     </span>
     <span class="navbar-item">
       <h1 class="navbar-title">IoT Platform</h1>
     </span>
-
     <div class="navbar-item icons-container">
       <span class="navbar-item icon-wrapper">
         <i class="material-icons md-light">notifications</i>
