IOT-40 Added ripple class to navigation links

--- a/frontend/src/app/components/nav/navbar/navbar.component.html
+++ b/frontend/src/app/components/nav/navbar/navbar.component.html
@@ -24,10 +24,10 @@
   <div class="navbar-menu">
     <div class="navbar-end">
       <div class="navbar-item icons-container">
-        <span class="icon-wrapper"
+        <span class="icon-wrapper ripple"
           ><i class="material-icons md-light">notifications</i></span
         >
-        <span class="icon-wrapper"
+        <span class="icon-wrapper ripple"
           ><i class="material-icons md-light">person</i></span
         >
       </div>
