--- a/frontend/src/app/components/nav/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/nav/sidebar/sidebar.component.html
@@ -1,7 +1,4 @@
-<div
-  class="sidebar-container"
-  [ngStyle]="{ width: isExpanded ? '200px' : '60px' }"
->
+<div class="sidebar-container">
   <div class="icons-container">
     <a class="ripple" routerLink="">
       <i class="material-icons md-light">explore</i>
