--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -1,7 +1,16 @@
 @import "../styles/variables.scss";
+@import "bulma/sass/utilities/mixins";
 
 .content {
-  // margin-left: $side-navbar-width;
+  margin-left: $side-navbar-width;
   padding: 20px 15px;
   text-align: justify;
+
+  @include mobile {
+    margin-left: 0;
+  }
+
+  @include tablet-only {
+    margin-left: $side-navbar-collapsed-width;
+  }
 }
