IOT-40 Implemented dynamic sidebar buttons styling

--- a/frontend/src/app/components/nav/navbar/navbar.component.html
+++ b/frontend/src/app/components/nav/navbar/navbar.component.html
@@ -7,14 +7,14 @@
       <h1 class="navbar-title">IoT Platform</h1>
     </span>
     <div class="navbar-item icons-container">
-      <span class="navbar-item icon-wrapper">
+      <span class="navbar-item icon-wrapper ripple">
         <i class="material-icons md-light">notifications</i>
       </span>
-      <span class="navbar-item icon-wrapper">
+      <span class="navbar-item icon-wrapper ripple">
         <i class="material-icons md-light">person</i>
       </span>
     </div>
-    <button class="navbar-burger" aria-label="menu">
+    <button class="navbar-burger ripple" aria-label="menu">
       <span aria-hidden="true"></span>
       <span aria-hidden="true"></span>
       <span aria-hidden="true"></span>
