--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -15,39 +15,12 @@
 /* MATERIAL ICONS STYLING */
 /* Docs: https://developers.google.com/fonts/docs/material_icons */
 
-/* Rules for sizing the icon. */
-// .material-icons.md-18 {
-//   font-size: 18px;
-// }
-// .material-icons.md-24 {
-//   font-size: 24px;
-// }
-// .material-icons.md-28 {
-//   font-size: 28px;
-// }
-// .material-icons.md-36 {
-//   font-size: 36px;
-// }
-// .material-icons.md-48 {
-//   font-size: 48px;
-// }
-
-/* Rules for using icons as black on a light background. */
-// .material-icons.md-dark {
-//   color: rgba(0, 0, 0, 0.54);
-// }
-// .material-icons.md-dark.md-inactive {
-//   color: rgba(0, 0, 0, 0.26);
-// }
-
 /* Rules for using icons as white on a dark background. */
-.material-icons.md-light {
+.material-icons.md-active {
   color: $icon-active;
 }
-// .material-icons.md-light:hover {
-//   color: $icon-hover;
-// }
-.material-icons.md-light.md-inactive {
+
+.material-icons.md-inactive {
   color: $icon-inactive;
 }
 
