--- a/frontend/src/app/components/nav/sidebar/sidebar.component.scss
+++ b/frontend/src/app/components/nav/sidebar/sidebar.component.scss
@@ -16,29 +16,45 @@
   @include mobile {
     display: none;
   }
-
   @include tablet-only {
     width: $side-navbar-collapsed-width;
   }
+}
+.icons-container {
+  display: flex;
+  flex-direction: column;
+}
 
-  & .icons-container {
-    display: flex;
-    flex-direction: column;
+a {
+  display: flex;
+  align-items: center;
+  padding-left: 1em;
+  height: 3.75em;
+  &:hover:not(.active),
+  &:focus:not(.active) {
+    background-color: rgba(0, 0, 0, 0.25);
   }
-
-  & a {
-    color: $icon-inactive;
-    display: flex;
-    align-items: center;
-    padding-left: 1em;
-    height: 3.75em;
-    &:hover {
-      background-color: rgba(0, 0, 0, 0.25);
-    }
+  &:active {
+    background-color: rgba(0, 0, 0, 0.25);
   }
 }
 
 .material-icons {
   font-size: 28px;
   margin-right: 16px;
+}
+
+.link-active {
+  background-color: rgba(0, 0, 0, 0.25);
+  color: $icon-active;
+}
+
+.link-inactive {
+  color: $icon-inactive;
+}
+
+.logo-container {
+  @include tablet-only {
+    display: none;
+  }
 }
