IOT-40 General styling fixes

--- a/frontend/src/app/components/nav/navbar/navbar.component.html
+++ b/frontend/src/app/components/nav/navbar/navbar.component.html
@@ -4,14 +4,14 @@
       <i class="material-icons">menu</i>
     </span>
     <span class="navbar-item">
-      <h1 class="navbar-title">IoT Platform</h1>
+      <h1 class="navbar-title non-draggable">IoT Platform</h1>
     </span>
     <div class="navbar-item icons-container">
       <span class="navbar-item icon-wrapper ripple">
-        <i class="material-icons md-light">notifications</i>
+        <i class="material-icons md-active">notifications</i>
       </span>
       <span class="navbar-item icon-wrapper ripple">
-        <i class="material-icons md-light">person</i>
+        <i class="material-icons md-active">person</i>
       </span>
     </div>
     <button class="navbar-burger ripple" aria-label="menu">
@@ -25,10 +25,10 @@
     <div class="navbar-end">
       <div class="navbar-item icons-container">
         <span class="icon-wrapper ripple"
-          ><i class="material-icons md-light">notifications</i></span
+          ><i class="material-icons md-active">notifications</i></span
         >
         <span class="icon-wrapper ripple"
-          ><i class="material-icons md-light">person</i></span
+          ><i class="material-icons md-active">person</i></span
         >
       </div>
     </div>
