--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -27,7 +27,8 @@
 .material-icons,
 img,
 a,
-button {
+button,
+.non-draggable {
   -webkit-user-select: none; /* Safari 3.1+ */
   -moz-user-select: none; /* Firefox 2+ */
   -ms-user-select: none; /* IE 10+ */
