--- a/frontend/src/app/components/nav/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/nav/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<div class="sidebar-container">
+<div class="sidebar-container" *ngIf="!isMobileView">
   <div class="icons-container">
     <a
       routerLink=""
