--- a/frontend/src/app/components/nav/navbar/navbar.component.html
+++ b/frontend/src/app/components/nav/navbar/navbar.component.html
@@ -1,12 +1,14 @@
 <nav class="navbar is-primary" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
-    <span class="navbar-item sidebar-menu ripple">
-      <i class="material-icons">menu</i>
-    </span>
+    <ng-container *ngIf="!isMobileView">
+      <span class="navbar-item sidebar-menu ripple">
+        <i class="material-icons">menu</i>
+      </span>
+    </ng-container>
     <span class="navbar-item">
       <h1 class="navbar-title non-draggable">IoT Platform</h1>
     </span>
-    <div class="navbar-item icons-container">
+    <div class="navbar-item icons-container" *ngIf="isMobileView">
       <span class="navbar-item icon-wrapper ripple">
         <i class="material-icons md-active">notifications</i>
       </span>
@@ -22,7 +24,7 @@
   </div>
 
   <div class="navbar-menu">
-    <div class="navbar-end">
+    <div class="navbar-end" *ngIf="!isMobileView">
       <div class="navbar-item icons-container">
         <span class="icon-wrapper ripple"
           ><i class="material-icons md-active">notifications</i></span
