--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -6,11 +6,12 @@
   padding: 20px 15px;
   text-align: justify;
 
-  @include mobile {
-    margin-left: 0;
-  }
-
   @include tablet-only {
     margin-left: $side-navbar-collapsed-width;
+  }
+
+  // Mobile view
+  @media screen and ((max-height: $mobile-viewport-height) or ((max-width: $tablet))) {
+    margin-left: 0;
   }
 }
