--- a/frontend/src/app/components/nav/navbar/navbar.component.scss
+++ b/frontend/src/app/components/nav/navbar/navbar.component.scss
@@ -8,7 +8,8 @@ $icon-bg-color: rgba(0, 0, 0, 0.05);
   z-index: 40;
   top: 0;
   left: 0;
-  @include mobile {
+  // Mobile view
+  @media screen and ((max-height: $mobile-viewport-height) or (max-width: $tablet)) {
     font-size: 0.85em;
   }
 }
