--- a/frontend/src/styles/variables.scss
+++ b/frontend/src/styles/variables.scss
@@ -10,10 +10,11 @@ $icon-inactive: #b5b5b5;
 $icon-hover: #dbdbdb;
 
 /* BREAKPOINTS */
-$tablet: 700px;
+$tablet: 701px;
 $fullhd-enabled: false;
 $widescreen-enabled: false;
 $navbar-breakpoint: $tablet;
+$mobile-viewport-height: 412px;
 
 /* NAVBARS */
 $top-navbar-height: 52px;
