IOT-40 Added sidebar logo

--- a/frontend/src/app/components/nav/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/nav/sidebar/sidebar.component.html
@@ -65,5 +65,7 @@
       <span class="is-size-5">Utenti</span>
     </a>
   </div>
-  <div class="logo-container"></div>
+  <div class="logo-container" *ngIf="isExpanded">
+    <img src="assets/imgs/logo.png" />
+  </div>
 </div>
